Automatically create thread dumps on restart
This aids in analyzing the state before a restart in case we missed to
create the dump manually

Request: MO
Change-Id: I62601bb3f384039cc63cb2bfcbcc784265a53d15